--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@
     --text-color: #1E1E1E;
     --blue-background: rgba(40, 57, 72);
     --light-gray: rgba(248, 248, 248);
+
+    --footer:#333333;
+    --footer-callout: #4E4D55;
+    --footer-callout-btn: #117765;
 }
 
 body {
@@ -56,7 +60,15 @@ header {
 content {
     width: 75%;
     display: block;
-    margin: 150px auto 141px;
+    margin: 150px auto 0;
+}
+
+background{
+    background-color: var(--light-gray);
+    width: 83.3%;
+    display: block;
+    margin: 4% auto 0;
+    border-radius: 20px;
 }
 
 .nav-links {
@@ -121,6 +133,15 @@ content {
     line-height: 1.8;
     font-size: var(--text-content);
     font-weight: var(--regular);
+}
+
+.title-team {
+    font-size: var(--title-content);
+    color: var(--white);
+    font-family: var(--figtree);
+    font-weight: var(--medium);
+    text-align: center;
+    margin-bottom: 8% !important;
 }
 
 p {
@@ -214,6 +235,7 @@ p {
 
 .section-2 img{
     width: 32.8%;
+    height: 100%;
 }
 .box-section-2{
     width: 60.3%;
@@ -230,25 +252,20 @@ p {
 }
 
 .text-content-about{
-    margin-top: 3%;
+    /* margin-top: 3%;   */
     width: 100%;
 }
 
-.point{
+.point, .point-3{
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     flex-direction: row;
     margin-top: 3%;
-    row-gap: 3%;
 
 }
 
 .box-point {
     width: 44.8%;
-}
-
-.box-point-2 {
-    width: 55%;
 }
 
 .box-point-content {
@@ -271,6 +288,243 @@ p {
     font-weight: var(--bold);
     padding: 18px 25px;
     border-radius: 20px;
-    margin-top: 5%;
+    margin-top: 4.5%;
     width: 10%;
+    display: ruby-text  ;
 }
+
+
+/* SECTION 3 */
+.section-3{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* margin: 7% 0; */
+}
+
+.box-section-3{
+    width: 44.4%;
+    height: 100%;
+}
+
+.section-3-img{
+    width: 48.6%;
+    height: 100%;
+    margin-top: 3.5%;
+}
+
+.box-point-3{
+    width: 60%;
+}
+
+.text-content-about-2 {
+    margin-top: 5%;
+    width: 100%;
+}
+
+.point-3{
+    margin-top: 5%
+}
+
+
+/* Team Section or SECTION 4*/
+.team-section {
+    margin: 2.5% 0;
+    background-color: var(--blue-background);
+    padding: 5% 0;
+}
+
+.team-member{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: -3%;
+}
+
+.box-team{
+    width: 22.5%;
+    height: 100%;
+}
+
+.box-team img{
+    width: 100%;
+}
+
+
+.title-member {
+    font-size: var(--title-section);
+    color: var(--white);
+    font-family: var(--figtree);
+    font-weight: var(--medium);
+    margin: 3% 0 5%;
+}
+
+.title-departement {
+    /* font-size: var(--text-departement); */
+    font-family: var(--catamaran);
+    font-weight: var(--regular);
+    color: var(--white);
+    margin-bottom: 15% !important;
+}
+
+
+/* Our Vision */
+.our-vision{
+    padding-top: 6%;
+    width: 90%;
+    display: block;
+    margin:  auto ;
+}
+
+.vision-content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.box-vision{
+    width: 42.7%;
+}
+
+.box-vision-2{
+    width: 49.3%;
+}
+
+.vision-title {
+    font-size: var(--title-content);
+    font-weight: var(--semi-bold);
+    font-family: var(--figtree);
+}
+
+.vision-section {
+    margin-bottom: 5%;
+    color: var(--orange);
+    font-size: var(--title-section);
+    font-family: var(--figtree);
+    font-weight: var(--medium);
+}
+
+.vision-text {
+}
+
+
+/* footer */
+footer {
+    width: 100%;
+    background-color: var(--footer);
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    
+  }
+
+  footer p {
+    color: var(--white);
+  }
+
+  .footer-callout {
+    width: 75%;
+    margin: 0 auto;
+    padding-top: 100px;
+  }
+
+  .footer-callout-wrapper {
+    background-color: var(--footer-callout);
+    border-radius: 20px;
+    padding: 90px 120px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .footer-callout-logo {
+    width: 117px;
+    height: 117px;
+  }
+
+  .footer-callout-label {
+    font-family: 'Figtree';
+    font-size: 38px;
+    font-weight: 500;
+    color: var(--white);
+    width: 70%;
+  }
+
+  .footer-callout-btn button {
+    background-color: var(--footer-callout-btn);
+    padding: 18px 24px;
+    border-radius: 20px;
+    border: none;
+    font-family: 'Figtree';
+    font-weight: 700;
+    font-size: 16px;
+    color: var(--white);
+  }
+
+  .footer-line {
+    width: 72.2%;
+    border-bottom: 3px var(--white) solid;
+    padding: 103px 0 0;
+    margin: 0 auto;
+  }
+
+  .footer-navigation {
+    width: 75%;
+    margin: 0 auto;
+    padding: 100px 0 100px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .footer-a {
+    width: 20.5%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+  }
+
+  .footer-label {
+    font-family: 'Catamaran';
+    font-weight: 600;
+    color: var(--orange);
+    font-size: 25px;
+  }
+
+  .footer-b {
+    width: 58.4%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .footer-menu-wrapper a {
+    font-size: 18px;
+    color: var(--white);
+    text-decoration: none;
+    line-height: 40px;
+  }
+
+  .footer-menu-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .footer-navigation-wrapper,
+  .footer-address-warpper,
+  .footer-browse-wrapper,
+  .footer-group-wrapper,
+  .footer-explore-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+  }
+
+  .social-media-icons-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px 0 140px 0;
+  }
