--- a/style.css
+++ b/style.css
@@ -1,530 +1,543 @@
-
-*{
-    margin: 0;
-    font-family:'Catamaran';
-    font-size: 18px;
-    color: var(--black);
-    padding: 0;
+* {
+  margin: 0;
+  font-family: "Catamaran";
+  font-size: 18px;
+  color: var(--black);
+  padding: 0;
 }
 
 :root {
-    --bold: 700;
-    --semi-bold: 600;
-    --medium: 500;
-    --regular: 400;
-    --light: 300;
-    --extra-light: 200;
+  --bold: 700;
+  --semi-bold: 600;
+  --medium: 500;
+  --regular: 400;
+  --light: 300;
+  --extra-light: 200;
 
-    --hero-title: clamp(32px, 3.1vw, 60px);
-    --title-news: clamp(25px, 2.5vw, 48px);
-    --arrow: clamp(15px, 1.5vw, 30px);
-    --title-content: clamp(20px, 1.9vw, 38px);
-    --title-section: clamp(13px, 1.3vw, 25px);
-    --text-departement: clamp(10px, 1.0vw, 20px);
-    --text-content: clamp(9px, 0.9vw, 18px);
-    --text-button: clamp(8px, 0.83vw, 16px);
-    --figtree: 'Figtree', sans-serif;
-    --catamaran: 'Catamaran', sans-serif;
-    --poppins: "Poppins", sans-serif;
+  --hero-title: clamp(32px, 3.1vw, 60px);
+  --title-news: clamp(25px, 2.5vw, 48px);
+  --arrow: clamp(15px, 1.5vw, 30px);
+  --title-content: clamp(20px, 1.9vw, 38px);
+  --title-section: clamp(13px, 1.3vw, 25px);
+  --text-departement: clamp(10px, 1vw, 20px);
+  --text-content: clamp(9px, 0.9vw, 18px);
+  --text-button: clamp(8px, 0.83vw, 16px);
+  --figtree: "Figtree", sans-serif;
+  --catamaran: "Catamaran", sans-serif;
+  --poppins: "Poppins", sans-serif;
 
+  --white: rgba(255, 255, 255);
+  --dark-liver: rgba(78, 77, 85);
+  --black: rgba(51, 51, 51);
+  --green: rgba(17, 119, 101);
+  --orange: rgba(237, 79, 24);
+  --blue: rgba(56, 90, 234);
+  --text-color: #1e1e1e;
+  --blue-background: rgba(40, 57, 72);
+  --light-gray: rgba(248, 248, 248);
 
-    --white: rgba(255, 255, 255);
-    --dark-liver: rgba(78, 77, 85);
-    --black: rgba(51, 51, 51);
-    --green: rgba(17, 119, 101);
-    --orange: rgba(237, 79, 24);
-    --blue: rgba(56, 90, 234);
-    --text-color: #1E1E1E;
-    --blue-background: rgba(40, 57, 72);
-    --light-gray: rgba(248, 248, 248);
-
-    --footer:#333333;
-    --footer-callout: #4E4D55;
-    --footer-callout-btn: #117765;
+  --footer: #333333;
+  --footer-callout: #4e4d55;
+  --footer-callout-btn: #117765;
 }
 
 body {
-    width: 100%;
+  width: 100%;
 }
 
 header {
-    width:75%;
-    display: flex;
-    flex-direction: row;
-    margin: 0 auto;
-    padding-top: 50px;
-    justify-content:space-between;
-    align-items: center;
+  width: 75%;
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  padding-top: 50px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 content {
-    width: 75%;
-    display: block;
-    margin: 150px auto 0;
+  width: 75%;
+  display: block;
+  margin: 150px auto 0;
 }
 
-background{
-    background-color: var(--light-gray);
-    width: 83.3%;
-    display: block;
-    margin: 4% auto 0;
-    border-radius: 20px;
+background {
+  background-color: var(--light-gray);
+  width: 83.3%;
+  display: block;
+  margin: 4% auto 0;
+  border-radius: 20px;
 }
 
 .nav-links {
-    display: flex;
-    flex-direction: row;
-    column-gap: 70px;
-  }
+  display: flex;
+  flex-direction: row;
+  column-gap: 70px;
+}
 
-  .nav-links a {
-    font-family: "Figtree";
-    font-weight: 400;
-    font-size: 25px;
-    text-decoration: none;
-    box-sizing: border-box;
-    display: inline-block;
-    padding-bottom: 11px;
-    border-bottom: 3px solid transparent;
-  }
+.nav-links a {
+  font-family: "Figtree";
+  font-weight: 400;
+  font-size: 25px;
+  text-decoration: none;
+  box-sizing: border-box;
+  display: inline-block;
+  padding-bottom: 11px;
+  border-bottom: 3px solid transparent;
+}
 
-  .locale,
-  .locale a {
-    font-family: "Figtree";
-    font-weight: 400;
-    font-size: 25px;
-    text-decoration: none;
-    padding-bottom: 15px;
-  }
+.locale,
+.locale a {
+  font-family: "Figtree";
+  font-weight: 400;
+  font-size: 25px;
+  text-decoration: none;
+  padding-bottom: 15px;
+}
 
 .orange {
-    color: var(--orange);
+  color: var(--orange);
 }
 
 .nav-links a:hover {
-    color: var(--orange);
-    border-bottom: var(--orange) 3px solid;
-  }
-
-.default {
-    color: var(--black);
+  color: var(--orange);
+  border-bottom: var(--orange) 3px solid;
 }
 
+.default {
+  color: var(--black);
+}
 
 .title-section {
-    font-size: var(--title-section);
-    font-family: var(--figtree);
-    color: var(--orange);
-    text-transform: capitalize;
-    font-weight: var(--medium);
+  font-size: var(--title-section);
+  font-family: var(--figtree);
+  color: var(--orange);
+  text-transform: capitalize;
+  font-weight: var(--medium);
 }
 
 .title-banner {
-    font-size: var(--hero-title);
-    font-family: var(--figtree);
-    font-weight: var(--bold);
-    margin-top: 2%;
+  font-size: var(--hero-title);
+  font-family: var(--figtree);
+  font-weight: var(--bold);
+  margin-top: 2%;
 }
 
 .text-banner {
-    float: right;
-    margin-top:6.5%;
-    margin-right: 6%;
-    line-height: 1.8;
-    font-size: var(--text-content);
-    font-weight: var(--regular);
+  float: right;
+  margin-top: 6.5%;
+  margin-right: 6%;
+  line-height: 1.8;
+  font-size: var(--text-content);
+  font-weight: var(--regular);
 }
 
 .title-team {
-    font-size: var(--title-content);
-    color: var(--white);
-    font-family: var(--figtree);
-    font-weight: var(--medium);
-    text-align: center;
-    margin-bottom: 8% !important;
+  font-size: var(--title-content);
+  color: var(--white);
+  font-family: var(--figtree);
+  font-weight: var(--medium);
+  text-align: center;
+  margin-bottom: 8% !important;
 }
 
 p {
-    line-height: normal !important;
+  line-height: normal !important;
 }
 
 /* SECTION 1 */
-.about-banner{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.about-banner {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.box-about{
-    width: 48%;
+.box-about {
+  width: 48%;
 }
 
-.box-about-2{
-    width: 41.1%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    row-gap: 30px;
+.box-about-2 {
+  width: 41.1%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  row-gap: 30px;
 }
 
 .double-button {
-    display: flex;
-    float: left;
-    justify-content: start;
-    flex-direction: row;
-    column-gap: 40px;
+  display: flex;
+  float: left;
+  justify-content: start;
+  flex-direction: row;
+  column-gap: 40px;
 }
 
-.double-button a, .double-button-home a {
-    padding: 18px 25px;
-    color: var(--orange);
-    border: 3px solid var(--orange);
-    border-radius: 20px;
-    text-transform: capitalize;
-    font-family: var(--figtree);
-    font-weight: var(--semi-bold);
-    font-size: var(--text-button);
+.double-button a,
+.double-button-home a {
+  padding: 18px 25px;
+  color: var(--orange);
+  border: 3px solid var(--orange);
+  border-radius: 20px;
+  text-transform: capitalize;
+  font-family: var(--figtree);
+  font-weight: var(--semi-bold);
+  font-size: var(--text-button);
 }
-
 
 .hover-map {
-    display: flex;
-    justify-content: space-between;
-    padding: 3% 0;
-    border-top: 3px solid #d1d1d1;
-    position: relative;
-    margin-top: 8.5%;
+  display: flex;
+  justify-content: space-between;
+  padding: 3% 0;
+  border-top: 3px solid #d1d1d1;
+  position: relative;
+  margin-top: 8.5%;
 }
 
-.hover-box{
-    width: 21.5%;
+.hover-box {
+  width: 21.5%;
 }
 
 .dot {
-    width: 1.5vw;
-    height: 1.5vw;
-    max-width: 32px;
-    max-height: 32px;
-    background-color: #d1d1d1;
-    position: absolute;
-    top: -6%;
-    border-radius: 100px;
+  width: 1.5vw;
+  height: 1.5vw;
+  max-width: 32px;
+  max-height: 32px;
+  background-color: #d1d1d1;
+  position: absolute;
+  top: -6%;
+  border-radius: 100px;
 }
 
 .hover-title {
-    font-size: var(--title-section);
-    font-family: var(--figtree);
-    font-weight: var(--semi-bold);
-    color: #1E1E1E;
+  font-size: var(--title-section);
+  font-family: var(--figtree);
+  font-weight: var(--semi-bold);
+  color: #1e1e1e;
 }
 
 .hover-text {
-    font-weight: var(--regular);
-    margin-top: 9%;
+  font-weight: var(--regular);
+  margin-top: 9%;
 }
-
 
 /* SECTION 2 */
 
-.section-2{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 8% 0;
+.section-2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 8% 0;
 }
 
-.section-2 img{
-    width: 32.8%;
-    height: 100%;
+.section-2 img {
+  width: 32.8%;
+  height: 100%;
 }
-.box-section-2{
-    width: 60.3%;
-
-
+.box-section-2 {
+  width: 60.3%;
 }
-.title-content-about{
-    margin-top: 1%;
-    font-size: var(--title-content);
-    font-family: var(--figtree);
-    color: var(--black);
-    font-weight: var(--medium);
-    margin-bottom: 4%;
+.title-content-about {
+  margin-top: 1%;
+  font-size: var(--title-content);
+  font-family: var(--figtree);
+  color: var(--black);
+  font-weight: var(--medium);
+  margin-bottom: 4%;
 }
 
-.text-content-about{
-    /* margin-top: 3%;   */
-    width: 100%;
+.text-content-about {
+  /* margin-top: 3%;   */
+  width: 100%;
 }
 
-.point, .point-3{
-    display: flex;
-    justify-content: start;
-    flex-direction: row;
-    margin-top: 3%;
-
+.point,
+.point-3 {
+  display: flex;
+  justify-content: start;
+  flex-direction: row;
+  margin-top: 3%;
 }
 
 .box-point {
-    width: 44.8%;
+  width: 44.8%;
 }
 
 .box-point-content {
-    display: flex;
-    gap: 2%;
+  display: flex;
+  gap: 2%;
 }
 
 .box-point-content img {
-    width: 5%;
-    display: block;
-    height: fit-content;
-    align-self: center;
+  width: 5%;
+  display: block;
+  height: fit-content;
+  align-self: center;
 }
 
 .btn-learn {
-    background-color: var(--orange);
-    color: var(--white);
-    font-size: var(--text-button);
-    font-family: var(--figtree);
-    font-weight: var(--bold);
-    padding: 18px 25px;
-    border-radius: 20px;
-    margin-top: 4.5%;
-    width: 10%;
-    display: ruby-text  ;
+  background-color: var(--orange);
+  color: var(--white);
+  font-size: var(--text-button);
+  font-family: var(--figtree);
+  font-weight: var(--bold);
+  padding: 18px 25px;
+  border-radius: 20px;
+  margin-top: 4.5%;
+  width: 10%;
+  display: ruby-text;
 }
-
 
 /* SECTION 3 */
-.section-3{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    /* margin: 7% 0; */
+.section-3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* margin: 7% 0; */
 }
 
-.box-section-3{
-    width: 44.4%;
-    height: 100%;
+.box-section-3 {
+  width: 44.4%;
+  height: 100%;
 }
 
-.section-3-img{
-    width: 48.6%;
-    height: 100%;
-    margin-top: 3.5%;
+.section-3-img {
+  width: 48.6%;
+  height: 100%;
+  margin-top: 3.5%;
 }
 
-.box-point-3{
-    width: 60%;
+.box-point-3 {
+  width: 60%;
 }
 
 .text-content-about-2 {
-    margin-top: 5%;
-    width: 100%;
+  margin-top: 5%;
+  width: 100%;
 }
 
-.point-3{
-    margin-top: 5%
+.point-3 {
+  margin-top: 5%;
 }
-
 
 /* Team Section or SECTION 4*/
 .team-section {
-    margin: 2.5% 0;
-    background-color: var(--blue-background);
-    padding: 5% 0;
+  margin: 2.5% 0;
+  background-color: var(--blue-background);
+  padding: 5% 0;
 }
 
-.team-member{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin-top: -3%;
+.team-member {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-top: -3%;
 }
 
-.box-team{
-    width: 22.5%;
-    height: 100%;
+.box-team {
+  width: 22.5%;
+  height: 100%;
 }
 
-.box-team img{
-    width: 100%;
+.box-team img {
+  width: 100%;
 }
-
 
 .title-member {
-    font-size: var(--title-section);
-    color: var(--white);
-    font-family: var(--figtree);
-    font-weight: var(--medium);
-    margin: 3% 0 5%;
+  font-size: var(--title-section);
+  color: var(--white);
+  font-family: var(--figtree);
+  font-weight: var(--medium);
+  margin: 3% 0 5%;
 }
 
 .title-departement {
-    /* font-size: var(--text-departement); */
-    font-family: var(--catamaran);
-    font-weight: var(--regular);
-    color: var(--white);
-    margin-bottom: 15% !important;
+  /* font-size: var(--text-departement); */
+  font-family: var(--catamaran);
+  font-weight: var(--regular);
+  color: var(--white);
+  margin-bottom: 15% !important;
 }
-
 
 /* Our Vision */
-.our-vision{
-    padding-top: 6%;
-    width: 90%;
-    display: block;
-    margin:  auto ;
+.our-vision {
+  padding-top: 6%;
+  width: 90%;
+  display: block;
+  margin: auto;
 }
 
-.vision-content{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.vision-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.box-vision{
-    width: 42.7%;
+.box-vision {
+  width: 42.7%;
 }
 
-.box-vision-2{
-    width: 49.3%;
+.box-vision-2 {
+  width: 49.3%;
 }
 
 .vision-title {
-    font-size: var(--title-content);
-    font-weight: var(--semi-bold);
-    font-family: var(--figtree);
+  font-size: var(--title-content);
+  font-weight: var(--semi-bold);
+  font-family: var(--figtree);
 }
 
 .vision-section {
-    margin-bottom: 5%;
-    color: var(--orange);
-    font-size: var(--title-section);
-    font-family: var(--figtree);
-    font-weight: var(--medium);
+  margin-bottom: 5%;
+  color: var(--orange);
+  font-size: var(--title-section);
+  font-family: var(--figtree);
+  font-weight: var(--medium);
 }
 
-.vision-text {
+/* Our Commitment */
+.our-commitment-title {
+  font-family: var(--figtree);
+  font-size: var(--title-section);
+  font-weight: var(--medium);
+  color: var(--orange);
 }
 
+.our-commitment {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  column-gap: 3%;
+}
+
+.box-commitment {
+  width: 30.9%;
+  padding: 2%;
+  border-radius: 20px;
+}
+
+.title-content-comitment {
+  font-size: var(--title-section);
+  font-family: var(--figtree);
+  font-weight: var(--medium);
+  margin: 5% 0 10%;
+}
 
 /* footer */
 footer {
-    width: 100%;
-    background-color: var(--footer);
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    
-  }
+  width: 100%;
+  background-color: var(--footer);
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
 
-  footer p {
-    color: var(--white);
-  }
+footer p {
+  color: var(--white);
+}
 
-  .footer-callout {
-    width: 75%;
-    margin: 0 auto;
-    padding-top: 100px;
-  }
+.footer-callout {
+  width: 75%;
+  margin: 0 auto;
+  padding-top: 100px;
+}
 
-  .footer-callout-wrapper {
-    background-color: var(--footer-callout);
-    border-radius: 20px;
-    padding: 90px 120px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-  }
+.footer-callout-wrapper {
+  background-color: var(--footer-callout);
+  border-radius: 20px;
+  padding: 90px 120px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  .footer-callout-logo {
-    width: 117px;
-    height: 117px;
-  }
+.footer-callout-logo {
+  width: 117px;
+  height: 117px;
+}
 
-  .footer-callout-label {
-    font-family: 'Figtree';
-    font-size: 38px;
-    font-weight: 500;
-    color: var(--white);
-    width: 70%;
-  }
+.footer-callout-label {
+  font-family: "Figtree";
+  font-size: 38px;
+  font-weight: 500;
+  color: var(--white);
+  width: 70%;
+}
 
-  .footer-callout-btn button {
-    background-color: var(--footer-callout-btn);
-    padding: 18px 24px;
-    border-radius: 20px;
-    border: none;
-    font-family: 'Figtree';
-    font-weight: 700;
-    font-size: 16px;
-    color: var(--white);
-  }
+.footer-callout-btn button {
+  background-color: var(--footer-callout-btn);
+  padding: 18px 24px;
+  border-radius: 20px;
+  border: none;
+  font-family: "Figtree";
+  font-weight: 700;
+  font-size: 16px;
+  color: var(--white);
+}
 
-  .footer-line {
-    width: 72.2%;
-    border-bottom: 3px var(--white) solid;
-    padding: 103px 0 0;
-    margin: 0 auto;
-  }
+.footer-line {
+  width: 72.2%;
+  border-bottom: 3px var(--white) solid;
+  padding: 103px 0 0;
+  margin: 0 auto;
+}
 
-  .footer-navigation {
-    width: 75%;
-    margin: 0 auto;
-    padding: 100px 0 100px 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
+.footer-navigation {
+  width: 75%;
+  margin: 0 auto;
+  padding: 100px 0 100px 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
-  .footer-a {
-    width: 20.5%;
-    display: flex;
-    flex-direction: column;
-    row-gap: 30px;
-  }
+.footer-a {
+  width: 20.5%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+}
 
-  .footer-label {
-    font-family: 'Catamaran';
-    font-weight: 600;
-    color: var(--orange);
-    font-size: 25px;
-  }
+.footer-label {
+  font-family: "Catamaran";
+  font-weight: 600;
+  color: var(--orange);
+  font-size: 25px;
+}
 
-  .footer-b {
-    width: 58.4%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
+.footer-b {
+  width: 58.4%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
-  .footer-menu-wrapper a {
-    font-size: 18px;
-    color: var(--white);
-    text-decoration: none;
-    line-height: 40px;
-  }
+.footer-menu-wrapper a {
+  font-size: 18px;
+  color: var(--white);
+  text-decoration: none;
+  line-height: 40px;
+}
 
-  .footer-menu-wrapper {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
+.footer-menu-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
-  .footer-navigation-wrapper,
-  .footer-address-warpper,
-  .footer-browse-wrapper,
-  .footer-group-wrapper,
-  .footer-explore-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-  }
+.footer-navigation-wrapper,
+.footer-address-warpper,
+.footer-browse-wrapper,
+.footer-group-wrapper,
+.footer-explore-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
 
-  .social-media-icons-footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 10px 0 140px 0;
-  }
+.social-media-icons-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 10px 0 140px 0;
+}
