--- a/style.css
+++ b/style.css
@@ -321,7 +321,7 @@ p {
 
 /* Team Section or SECTION 4*/
 .team-section {
-  margin: 2.5% 0;
+  margin: 3.8% 0;
   background-color: var(--blue-background);
   padding: 5% 0;
 }
@@ -361,7 +361,7 @@ p {
 
 /* Our Vision */
 .our-vision {
-  padding: 6% 0 2%;
+  padding: 6.5% 0 2%;
 
   width: 90%;
   display: block;
@@ -372,7 +372,10 @@ p {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 2%;
 }
+
+
 
 .box-vision {
   width: 42.7%;
@@ -382,10 +385,18 @@ p {
   width: 49.3%;
 }
 
+.box-vision-2 img{
+  width: 100%;
+}
+
 .vision-title {
   font-size: var(--title-content);
   font-weight: var(--semi-bold);
   font-family: var(--figtree);
+}
+
+.vision-text{
+  margin-top: 1%;
 }
 
 .vision-section {
@@ -402,13 +413,16 @@ p {
   font-size: var(--title-section);
   font-weight: var(--medium);
   color: var(--orange);
+  margin-top: 6.5%;
 }
+
 
 .our-commitment {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  column-gap: 3%;
+  column-gap: 3.5%;
+  margin-top: 2.5%;
 }
 
 .box-commitment {
@@ -421,7 +435,7 @@ p {
   font-size: var(--title-section);
   font-family: var(--figtree);
   font-weight: var(--medium);
-  margin: 5% 0 10%;
+  margin: 4% 0 7.5%;
 }
 
 .custom-nav-blue {
@@ -549,4 +563,245 @@ footer p {
   flex-direction: row;
   justify-content: space-between;
   padding: 10px 0 140px 0;
+}
+
+
+
+/* MOBILE */
+@media (min-width: 360px) and (max-width: 640px) {
+  * {
+    margin: 0;
+    font-family: "Catamaran";
+    font-size: 14px;
+    color: var(--black);
+    padding: 0;
+  }
+  :root {
+    --hero-title: clamp(24px, 6.6vw, 42px);
+    --title-news: clamp(24px, 6.6vw, 42px);
+    --title-content: clamp(24px, 6.6vw, 42px);
+    --title-section: clamp(16px, 0vw, 27px);
+    --text-departement: clamp(14px, 3.8vw, 124px);
+    --text-content: clamp(14px, 3.8vw, 24px);
+    --text-button: clamp(12px, 2.7vw, 17px);
+  }
+  
+  .nav-links, .locale{
+    display: none;
+  }
+
+  header{
+    width: 80.5%;
+    padding-top: 25px;
+  }
+
+  .logo-wrapper{
+    width: 32.7%;
+  }
+
+  .logo-wrapper img{
+    width: 100%;
+  }
+
+  content {
+    width: 80.5%;
+    display: block;
+    margin: 45px auto 0;  
+  }
+
+  /* SECTION 1 MOBILE */
+  .about-banner {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .box-about, .box-about-2 {
+    width: 100%;
+  }
+
+  .box-about-2{
+    row-gap: 25px;
+  }
+.text-banner {
+  margin-top: 10%;
+  margin-right: 6%;
+  font-size: var(--text-content);
+  font-weight: var(--regular);
+  line-height: 1.5 !important;
+  }
+
+  .double-button {
+    column-gap: 15px;
+  }
+  .double-button a, .double-button-home a {
+    padding: 12px 17px;
+    border: 2px solid var(--orange);
+    border-radius: 10px;
+  }
+
+
+  /* Hover Map */
+  .hover-map {
+    padding: 0 0;
+    flex-direction: column;
+    border-top: none; */
+    position: none;
+    margin-top: 20%;
+    border-left: 2px solid #d1d1d1;
+  }
+
+  .hover-box {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    column-gap: 7%;
+    margin-bottom: 10%;
+  }
+
+  .dot {
+    width: 23.5vw;
+    height: 7.5vw;
+    max-width: 41px;
+    max-height: 28px;
+    position: unset;
+    margin-left: -5%;
+  }
+
+  .hover-text {
+    width: 92%;
+    line-height: 1.5 !important;
+  }
+
+  /* SECTION 2 */
+
+  .section-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 3% 0;
+  }
+
+  .section-2 img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .box-section-2 {
+    width: 100%;
+    margin-top: 10%;
+  }
+
+  .title-content-about {
+    margin-top: 4%;
+    margin-bottom: 7%;
+  }
+
+  .text-content-about {
+    width: 92%;
+    line-height: 1.43 !important;
+  }
+
+  .point, .point-3 {
+    display: flex;
+    justify-content: start;
+    flex-direction: column;
+    margin-top: 7.5%;
+  }
+
+  .box-point {
+    width: 100%;
+  }
+
+  .box-point-content img {
+    width: 5%;
+    display: block;
+    height: fit-content;
+    align-self: center;
+  }
+
+  .box-point-content {
+    display: flex;
+    gap: 4%;
+    margin-bottom: 1%;
+  }
+
+  .btn-learn {
+    background-color: var(--orange);
+    color: var(--white);
+    font-size: var(--text-button);
+    font-family: var(--figtree);
+    font-weight: var(--bold);
+    padding: 15px 17px;
+    border-radius: 10px;
+    margin-top: 10%;
+    width: 10%;
+    display: ruby-text;
+  }
+
+
+  /* SECTION 3 */
+  .section-3 {
+    flex-direction: column-reverse;
+  }
+
+  .section-3-img {
+    width: 100%;
+    height: 100%;
+    margin-top: 5.5%;
+  }
+
+  .box-section-3 {
+    width: 100%;
+    height: 100%;
+  }
+
+  .text-content-about-2 {
+    margin-top: 5%;
+    width: 91.5%;
+    line-height: 1.45 !important;
+  }
+
+  .box-point-3{
+    width: 100%;
+    height: 100%;
+  }
+
+
+  /* SECTION 4 */
+  .team-section {
+    margin: 7% 0;
+    padding: 14% 0;
+  }
+  .title-team {
+    font-size: var(--title-content);
+    color: var(--white);
+    font-family: var(--figtree);
+    font-weight: var(--medium);
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 8% !important;
+    width: 63.5%;
+  }
+  .team-member {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: -5%;
+  }
+
+  .box-team {
+    width: 47.2%;
+    height: 100%;
+  }
+
+  .title-member {
+    margin: 3% 0 3%;
+  }
+
+  .title-departement {
+    font-size: var(--text-button);
+  }
 }
